fix(mobile): videos carousel overflow for different screen sizes

--- a/src/app/routes/videos/videos.style.scss
+++ b/src/app/routes/videos/videos.style.scss
@@ -19,10 +19,6 @@
         margin-left: 6%;
       }
 
-      .use-spring-carousel-item {
-        width: 85% !important;
-      }
-
       .use-spring-carousel-thumbs-wrapper {
         cursor: pointer;
         width: fit-content !important;
